Sidebar: add attribute `data-menu-scrollbar=true|false`. Attribute enable or disable scrollbar in the sidebar menu, issue #1528

--- a/source/components/sidebar/sidebar.less
+++ b/source/components/sidebar/sidebar.less
@@ -109,7 +109,8 @@
     overflow-y: auto;
 
     &.hide-scroll {
-        .hideScrollBars();
+        //.hideScrollBars();
+        width: ~"calc(100% + 18px)";
     }
 
     li {
